--- a/source/css/settings/colors.css
+++ b/source/css/settings/colors.css
@@ -1,43 +1,43 @@
 
 :root {
-  --textcolor: #555;
-  --textcolor-subtle: color(var(--textcolor) tint(30%));
-  --textcolor-medsubtle: color(var(--textcolor) tint(60%));
-  --textcolor-verysubtle: color(var(--textcolor) tint(90%));
-  --textcolor-strong: color(var(--textcolor) shade(30%));
-  --textcolor-medstrong: color(var(--textcolor) shade(60%));
-  --textcolor-verystrong: color(var(--textcolor) shade(90%));
-  --primarycolor: #4f2683;
-  --primarycolor-dark: color(var(--primarycolor) shade(30%));
-  --primarycolor-meddark: color(var(--primarycolor) shade(60%));
-  --primarycolor-verydark: color(var(--primarycolor) shade(90%));
-  --primarycolor-light: color(var(--primarycolor) tint(10%));
-  --primarycolor-medlight: color(var(--primarycolor) tint(35%));
-  --primarycolor-verylight: color(var(--primarycolor) tint(60%));
-  --secondarycolor: #f54c01;
-  --secondarycolor-dark: color(var(--secondarycolor) shade(30%));
-  --secondarycolor-meddark: color(var(--secondarycolor) shade(60%));
-  --secondarycolor-verydark: color(var(--secondarycolor) shade(90%));
-  --secondarycolor-light: color(var(--secondarycolor) tint(30%));
-  --secondarycolor-medlight: color(var(--secondarycolor) tint(60%));
-  --secondarycolor-verylight: color(var(--secondarycolor) tint(90%));
-  --offsetcolor: #ccc;
-  --offsetcolor-subtle: color(var(--offsetcolor) tint(30%));
-  --offsetcolor-medsubtle: color(var(--offsetcolor) tint(60%));
-  --offsetcolor-verysubtle: color(var(--offsetcolor) tint(90%));
-  --offsetcolor-strong: color(var(--offsetcolor) shade(20%));
-  --offsetcolor-medstrong: color(var(--offsetcolor) shade(40%));
-  --offsetcolor-verystrong: color(var(--offsetcolor) shade(60%));
-  --darkcolor: #222;
-  --darkcolor-light: color(var(--darkcolor) tint(20%));
-  --darkcolor-medlight: color(var(--darkcolor) tint(40%));
-  --darkcolor-verylight: color(var(--darkcolor) tint(60%));
-  --darkcolor-dark: color(var(--darkcolor) shade(20%));
-  --darkcolor-meddark: color(var(--darkcolor) shade(40%));
-  --darkcolor-verydark: color(var(--darkcolor) shade(60%));
-  --alertcolor: #c40000;
-  --alertcolor-dark: #b00000;
-  --successcolor: #00b548;
-  --successcolor-dark: color(var(--successcolor) shade(30%));
-  --successcolor-meddark: color(var(--successcolor) shade(60%));
+  --text-color: #555;
+  --text-color-subtle: color(var(--text-color) tint(30%));
+  --text-color-medsubtle: color(var(--text-color) tint(60%));
+  --text-color-verysubtle: color(var(--text-color) tint(90%));
+  --text-color-strong: color(var(--text-color) shade(30%));
+  --text-color-medstrong: color(var(--text-color) shade(60%));
+  --text-color-verystrong: color(var(--text-color) shade(90%));
+  --primary-color: #4f2683;
+  --primary-color-dark: color(var(--primary-color) shade(30%));
+  --primary-color-meddark: color(var(--primary-color) shade(60%));
+  --primary-color-verydark: color(var(--primary-color) shade(90%));
+  --primary-color-light: color(var(--primary-color) tint(10%));
+  --primary-color-medlight: color(var(--primary-color) tint(35%));
+  --primary-color-verylight: color(var(--primary-color) tint(60%));
+  --secondary-color: #f54c01;
+  --secondary-color-dark: color(var(--secondary-color) shade(30%));
+  --secondary-color-meddark: color(var(--secondary-color) shade(60%));
+  --secondary-color-verydark: color(var(--secondary-color) shade(90%));
+  --secondary-color-light: color(var(--secondary-color) tint(30%));
+  --secondary-color-medlight: color(var(--secondary-color) tint(60%));
+  --secondary-color-verylight: color(var(--secondary-color) tint(90%));
+  --offset-color: #ccc;
+  --offset-color-subtle: color(var(--offset-color) tint(30%));
+  --offset-color-medsubtle: color(var(--offset-color) tint(60%));
+  --offset-color-verysubtle: color(var(--offset-color) tint(90%));
+  --offset-color-strong: color(var(--offset-color) shade(20%));
+  --offset-color-medstrong: color(var(--offset-color) shade(40%));
+  --offset-color-verystrong: color(var(--offset-color) shade(60%));
+  --dark-color: #222;
+  --dark-color-light: color(var(--dark-color) tint(20%));
+  --dark-color-medlight: color(var(--dark-color) tint(40%));
+  --dark-color-verylight: color(var(--dark-color) tint(60%));
+  --dark-color-dark: color(var(--dark-color) shade(20%));
+  --dark-color-meddark: color(var(--dark-color) shade(40%));
+  --dark-color-verydark: color(var(--dark-color) shade(60%));
+  --alert-color: #c40000;
+  --alert-color-dark: #b00000;
+  --success-color: #00b548;
+  --success-color-dark: color(var(--success-color) shade(30%));
+  --success-color-meddark: color(var(--success-color) shade(60%));
 }
