--- a/source/css/components/pagination.css
+++ b/source/css/components/pagination.css
@@ -1,32 +1,40 @@
 
+:root {
+  --pagination-gap: 6px;
+}
+
 .pagination {
   align-items: center;
   display: flex;
   font-size: 15px;
   margin: var(--gap-lg) 0 var(--$gap-lg) 0;
+}
 
-  li {
-    margin: 0 2px 6px 0;
+.pagination__item {
+  margin: 0 var(--pagination-gap) var(--pagination-gap) 0;
 
-    &.active {
-      a {
-        background-color: var(--primary-color);
+  &--active {
+    .pagination__link {
+      background-color: var(--primary-color);
+      color: #fff;
+
+      &:hover {
         color: #fff;
       }
     }
   }
+}
 
-  a {
-    background-color: var(--primary-color);
-    border-radius: var(--border-radius);
-    color: var(--text-color-subtle);
-    display: block;
-    padding: 6px 12px;
-    text-decoration: none;
-    transition-duration: $transition-duration;
+.pagination__link {
+  background-color: var(--offset-color-subtle);
+  border-radius: var(--border-radius);
+  color: var(--text-color-subtle);
+  display: block;
+  padding: 6px 12px;
+  text-decoration: none;
+  transition-duration: $transition-duration;
 
-    &:hover {
-      color: var(--text-color-medstrong);
-    }
+  &:hover {
+    color: var(--primary-color);
   }
 }
