--- a/source/css/layout/base.css
+++ b/source/css/layout/base.css
@@ -55,3 +55,10 @@ img {
   -ms-interpolation-mode: bicubic;
   max-width: 100%;
 }
+
+/* Buttons */
+
+button {
+  background-color: transparent;
+  border: 0;
+}
