--- a/source/css/layout/typography.css
+++ b/source/css/layout/typography.css
@@ -27,32 +27,50 @@ h6 {
   color: var(--text-color-medstrong);
   font-family: 'Lora';
   font-weight: 700;
-  line-height: 1.3;
+  line-height: 1.4;
   margin: 0 0 var(--gap-sm) 0;
 }
 
 h1 {
-  font-size: 32px;
-}
-
-h2 {
+  @media (--md) {
+    font-size: 32px;
+  }
   font-size: 26px;
 }
 
-h3 {
+h2 {
+  @media (--md) {
+    font-size: 26px;
+  }
   font-size: 21px;
 }
 
-h4 {
+h3 {
+  @media (--md) {
+    font-size: 21px;
+  }
   font-size: 18px;
 }
 
-h5 {
+h4 {
+  @media (--md) {
+    font-size: 18px;
+  }
   font-size: 16px;
 }
 
-h6 {
+h5 {
+  @media (--md) {
+    font-size: 16px;
+  }
   font-size: 14px;
+}
+
+h6 {
+  @media (--md) {
+    font-size: 14px;
+  }
+  font-size: 13px;
 }
 
 a {
