--- a/source/css/layout/typography.css
+++ b/source/css/layout/typography.css
@@ -6,7 +6,7 @@ html {
 body {
   color: var(--text-color);
   font-family: 'Lato';
-  font-size: var(--base-font-size);
+  font-size: calc(15px + .1vw);
   font-weight: 400;
   line-height: 1.5;
   text-rendering: optimizeLegibility;
@@ -28,49 +28,31 @@ h6 {
   font-family: 'Lora';
   font-weight: 700;
   line-height: 1.4;
-  margin: 0 0 var(--gap-sm) 0;
+  margin: 0 0 var(--gap-sm);
 }
 
 h1 {
-  @media (--md) {
-    font-size: 32px;
-  }
-  font-size: 26px;
+  font-size: calc(28px + .3vw);
 }
 
 h2 {
-  @media (--md) {
-    font-size: 26px;
-  }
-  font-size: 21px;
+  font-size: calc(24px + .3vw);
 }
 
 h3 {
-  @media (--md) {
-    font-size: 21px;
-  }
-  font-size: 18px;
+  font-size: calc(21px + .3vw);
 }
 
 h4 {
-  @media (--md) {
-    font-size: 18px;
-  }
-  font-size: 16px;
+  font-size: calc(18px + .15vw);
 }
 
 h5 {
-  @media (--md) {
-    font-size: 16px;
-  }
-  font-size: 14px;
+  font-size: calc(16px + .15vw);
 }
 
 h6 {
-  @media (--md) {
-    font-size: 14px;
-  }
-  font-size: 13px;
+  font-size: calc(14px + .15vw);
 }
 
 a {
@@ -88,7 +70,7 @@ strong {
 }
 
 small {
-  font-size: calc(var(--base-font-size) * .8);
+  font-size: calc(13px + .1vw);
 }
 
 code {
