--- a/source/css/layout/template-content.css
+++ b/source/css/layout/template-content.css
@@ -1,6 +1,16 @@
 
-
 .template-content {
+
+  /* Typography */
+
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    margin: 0 0 var(--gap-sm);
+  }
 
   strong {
     color: var(--text-color-medstrong);
