--- a/source/css/settings/vars.css
+++ b/source/css/settings/vars.css
@@ -3,7 +3,8 @@
   --border-radius: 4px;
   --gap: 30px;
   --gap-sm: calc(var(--gap) * .8);
-  --gap-xs: calc(var(--gap) * .4);
+  --gap-xs: calc(var(--gap) * .6);
+  --gap-xxs: calc(var(--gap) * .4);
   --gap-lg: calc(var(--gap) * 1.3);
   --gap-xl: calc(var(--gap) * 1.6);
   --gap-xxl: calc(var(--gap) * 2);
