--- a/source/css/components/ss-images.css
+++ b/source/css/components/ss-images.css
@@ -71,7 +71,7 @@ img {
 }
 
 .caption {
-  font-family: 'Lora';
+  font-family: var(--secondary-font);
   margin: 0;
   text-align: left;
   width: 100%;
