--- a/source/css/settings/colors.css
+++ b/source/css/settings/colors.css
@@ -7,21 +7,21 @@
   --text-color-strong: color(var(--text-color) shade(30%));
   --text-color-medstrong: color(var(--text-color) shade(60%));
   --text-color-verystrong: color(var(--text-color) shade(90%));
-  --primary-color: #4f2683;
+  --primary-color: #00afd6;
   --primary-color-dark: color(var(--primary-color) shade(30%));
   --primary-color-meddark: color(var(--primary-color) shade(60%));
   --primary-color-verydark: color(var(--primary-color) shade(90%));
   --primary-color-light: color(var(--primary-color) tint(10%));
   --primary-color-medlight: color(var(--primary-color) tint(35%));
   --primary-color-verylight: color(var(--primary-color) tint(60%));
-  --secondary-color: #f54c01;
+  --secondary-color: #ef3304;
   --secondary-color-dark: color(var(--secondary-color) shade(30%));
   --secondary-color-meddark: color(var(--secondary-color) shade(60%));
   --secondary-color-verydark: color(var(--secondary-color) shade(90%));
   --secondary-color-light: color(var(--secondary-color) tint(30%));
   --secondary-color-medlight: color(var(--secondary-color) tint(60%));
   --secondary-color-verylight: color(var(--secondary-color) tint(90%));
-  --offset-color: #ccc;
+  --offset-color: #ddd;
   --offset-color-subtle: color(var(--offset-color) tint(30%));
   --offset-color-medsubtle: color(var(--offset-color) tint(60%));
   --offset-color-verysubtle: color(var(--offset-color) tint(90%));
