--- a/source/css/components/buttons.css
+++ b/source/css/components/buttons.css
@@ -7,7 +7,7 @@
     color: var(--text-color);
     cursor: pointer;
     display: inline-block;
-    font-size: 14px;
+    font-size: calc(1.3rem + .1vw);
     font-weight: 700;
     letter-spacing: 1px;
     line-height: 1;
@@ -62,7 +62,7 @@
   }
 
   &--sm {
-    font-size: 11px;
+    font-size: calc(1.1rem + .1vw);
     padding: 10px 18px;
   }
 
