--- a/source/css/components/forms.css
+++ b/source/css/components/forms.css
@@ -7,7 +7,7 @@
     border-radius: 0;
     box-shadow: none;
     color: var(--text-color);
-    font-size: 16px;
+    font-size: calc(1.6rem + .1vw);
     height: auto;
     line-height: 1.3;
     margin: 0;
@@ -23,7 +23,7 @@
   --label-styles {
     clear: both;
     color: var(--text-color-strong);
-    font-size: 18px;
+    font-size: calc(1.8rem + .1vw);
     font-weight: 700;
     line-height: 1.3;
     margin: 0;
@@ -41,13 +41,13 @@ form {
       display: block;
 
       small {
-        font-size: 14px;
+        font-size: calc(1.3rem + .1vw);
         font-weight: 400;
       }
     }
 
     &.right {
-      font-size: 16px;
+      font-size: calc(1.6rem + .1vw);
     }
   }
 
@@ -59,7 +59,7 @@ form {
 
   ul,
   ol {
-    font-size: 16px;
+    font-size: calc(1.6rem + .1vw);
     margin: 0;
     padding: 0 0 var(--gap-sm) var(--gap);
 
@@ -81,7 +81,7 @@ form {
     border-bottom: 1px solid var(--offset-color);
     border-top: 1px solid var(--offset-color);
     clear: both;
-    font-size: 22px;
+    font-size: calc(2.2rem + .1vw);
     line-height: 1.3;
     margin: var(--gap-xs) 0 var(--gap-sm);
     padding: var(--gap-xs) 0;
@@ -136,9 +136,9 @@ textarea {
 }
 
 select {
-  -webkit-appearance: menulist-button;
+  appearance: menulist-button;
   border: 1px solid var(--offset-color-verystrong);
-  font-size: 14px;
+  font-size: calc(1.4rem + .1vw);
   height: 34px;
   line-height: 1.3;
   max-width: 540px;
@@ -261,7 +261,7 @@ label {
   background-color: var(--alert-color-dark);
   color: #fff;
   display: block;
-  font-size: 16px;
+  font-size: calc(1.6rem + .1vw);
   font-weight: 700;
   line-height: 1.3;
   padding: var(--gap-xs) var(--gap-sm);
@@ -290,7 +290,7 @@ label {
   &.error {
     color: var(--alert-color-dark);
     display: block;
-    font-size: 16px;
+    font-size: calc(1.6rem + .1vw);
     font-weight: 700;
     margin-top: 10px;
   }
@@ -301,7 +301,7 @@ label {
   border: 3px solid var(--success-color-meddark);
   color: #fff;
   display: block;
-  font-size: 18px;
+  font-size: calc(1.8rem + .1vw);
   font-weight: 700;
   margin: 0 0 var(--gap-sm) 0;
   padding: var(--gap-sm);
