--- a/source/css/layout/typography.css
+++ b/source/css/layout/typography.css
@@ -1,12 +1,12 @@
 
 html {
-  font-size: 100%;
+  font-size: 62.5%;
 }
 
 body {
   color: var(--text-color);
-  font-family: 'Lato';
-  font-size: calc(15px + .1vw);
+  font-family: var(--primary-font);
+  font-size: calc(1.5rem + .1vw);
   font-weight: 400;
   line-height: 1.5;
   text-rendering: optimizeLegibility;
@@ -25,34 +25,34 @@ h4,
 h5,
 h6 {
   color: var(--text-color-medstrong);
-  font-family: 'Lora';
+  font-family: var(--secondary-font);
   font-weight: 700;
   line-height: 1.4;
   margin: 0;
 }
 
 h1 {
-  font-size: calc(28px + .3vw);
+  font-size: calc(2.8rem + .3vw);
 }
 
 h2 {
-  font-size: calc(24px + .3vw);
+  font-size: calc(2.4rem + .3vw);
 }
 
 h3 {
-  font-size: calc(21px + .3vw);
+  font-size: calc(2.1rem + .3vw);
 }
 
 h4 {
-  font-size: calc(18px + .15vw);
+  font-size: calc(1.8rem + .15vw);
 }
 
 h5 {
-  font-size: calc(16px + .15vw);
+  font-size: calc(1.6rem + .15vw);
 }
 
 h6 {
-  font-size: calc(14px + .15vw);
+  font-size: calc(1.4rem + .15vw);
 }
 
 a {
@@ -70,7 +70,7 @@ strong {
 }
 
 small {
-  font-size: calc(13px + .1vw);
+  font-size: calc(1.3rem + .1vw);
 }
 
 code {
