--- a/source/css/components/forms.css
+++ b/source/css/components/forms.css
@@ -2,32 +2,53 @@
 :root {
   --input-styles: {
     appearance: none;
-    background-color: var(--offset-color);
-    border: 1px solid var(--offset-color-verystrong);
+    background-color: #fff;
+    border: 1px solid var(--offset-color-medstrong);
     border-radius: 0;
     box-shadow: none;
     color: var(--text-color);
-    font-size: calc(1.6rem + .1vw);
+    font-size: 1.6rem;
     height: auto;
     line-height: 1.3;
     margin: 0;
     outline: none;
-    padding: 6px;
+    padding: 8px;
   };
 
   --input-focus-styles {
-    box-shadow: 0 0 6px var(--primary-color);
+    border: 1px solid var(--secondary-color);
+    box-shadow: none;
     outline: 0 none;
   };
 
   --label-styles {
-    clear: both;
     color: var(--text-color-strong);
-    font-size: calc(1.8rem + .1vw);
+    font-size: 1.8rem;
     font-weight: 700;
     line-height: 1.3;
-    margin: 0;
-    padding: 0 0 var(--gap-xs) 0;
+    margin: 0 !important;
+    padding: 0 0 var(--gap-xxs) 0;
+  };
+
+  --alert-box-styles {
+    border-radius: var(--border-radius);
+    color: #fff;
+    padding: var(--gap-sm);
+    text-align: center;
+
+    strong {
+      color: #fff;
+    }
+  };
+
+  --success-box-styles: {
+    background-color: var(--success-color-dark);
+    border: 4px solid var(--success-color-verydark);
+  };
+
+  --error-box-styles: {
+    background-color: var(--alert-color-dark);
+    border: 4px solid var(--alert-color-verydark);
   };
 }
 
@@ -41,13 +62,13 @@ form {
       display: block;
 
       small {
-        font-size: calc(1.3rem + .1vw);
+        font-size: 1.4rem;
         font-weight: 400;
       }
     }
 
     &.right {
-      font-size: calc(1.6rem + .1vw);
+      font-size: 1.6rem;
     }
   }
 
@@ -59,7 +80,7 @@ form {
 
   ul,
   ol {
-    font-size: calc(1.6rem + .1vw);
+    font-size: 1.6rem;
     margin: 0;
     padding: 0 0 var(--gap-sm) var(--gap);
 
@@ -80,8 +101,7 @@ form {
   .FormHeading {
     border-bottom: 1px solid var(--offset-color);
     border-top: 1px solid var(--offset-color);
-    clear: both;
-    font-size: calc(2.2rem + .1vw);
+    font-size: 2.2rem;
     line-height: 1.3;
     margin: var(--gap-xs) 0 var(--gap-sm);
     padding: var(--gap-xs) 0;
@@ -91,14 +111,16 @@ form {
 
 fieldset {
   border: 0;
-  margin: 0 -6px;
-  padding: 0;
+  margin-bottom: var(--gap-sm);
+}
 
-  &.form-step {
-    margin: 0;
-    padding: 0;
-    width: 100%;
+.fields {
+  @media (--md) {
+    grid-template-columns: 1fr 1fr;
   }
+  display: grid;
+  grid-gap: var(--gap-xs) var(--gap-xxs);
+  grid-template-columns: 1fr;
 }
 
 .step-navigation {
@@ -119,15 +141,14 @@ input {
 
   &.checkbox {
     appearance: checkbox;
-    height: 20px;
-    margin-right: var(--gap-xs);
-    width: 20px;
+    height: auto;
+    margin-right: var(--gap-xxs);
+    width: auto;
   }
 }
 
 textarea {
   @apply --input-styles;
-  vertical-align: top;
   width: 100%;
 
   &:focus {
@@ -138,7 +159,7 @@ textarea {
 select {
   appearance: menulist-button;
   border: 1px solid var(--offset-color-verystrong);
-  font-size: calc(1.4rem + .1vw);
+  font-size: 1.4rem;
   height: 34px;
   line-height: 1.3;
   max-width: 540px;
@@ -150,32 +171,8 @@ select {
 }
 
 .field {
-  @media (--md) {
-    margin: 0 -2px var(--gap-sm) -2px;
-  }
-  display: inline-block;
-  font-size: 0;
-  margin: 0 0 var(--gap);
-  padding: 0 7.5px;
-  vertical-align: bottom;
-
-  &.text,
-  &.email,
-  &.password {
-    @media (--md) {
-      width: 50%;
-    }
-    width: 100%;
-  }
-
-  &.literal,
   &.textarea {
-    width: 100%;
-  }
-
-  &.checkboxset,
-  &.optionset {
-    width: 100%;
+    grid-column: 1 / -1;
   }
 
   &.checkbox {
@@ -225,16 +222,6 @@ ul {
   }
 }
 
-.tab {
-  .field {
-    .middleColumn {
-      clear: none !important;
-      margin: 0 !important;
-      width: auto;
-    }
-  }
-}
-
 label {
   &.right {
     margin: 0;
@@ -243,69 +230,56 @@ label {
   }
 }
 
-.required,
-.requiredField,
-.mathspamprotector {
-  label {
-    &.left {
-      &::after {
-        color: var(--alert-color);
-        content: ' *';
-        font-weight: 400;
-      }
-    }
-  }
+.error-message {
+  color: var(--alert-color-dark);
+  display: block;
+  font-size: 16px;
+  font-weight: 700;
+  margin-top: 10px;
 }
 
-.required {
-  background-color: var(--alert-color-dark);
-  color: #fff;
-  display: block;
-  font-size: calc(1.6rem + .1vw);
-  font-weight: 700;
-  line-height: 1.3;
-  padding: var(--gap-xs) var(--gap-sm);
-  position: relative;
-  text-align: center;
-  top: -2px;
-  width: 100%;
+.error-messages {
+  @apply --alert-box-styles;
+  @apply --error-box-styles;
+  margin: 0;
+  opacity: 0;
+  padding: 0;
+  transition: opacity var(--transition-duration-slow);
 
-  &::before {
-    border-bottom: 9px solid var(--alert-color-dark);
-    border-left: 9px solid transparent;
-    border-right: 9px solid transparent;
-    content: '';
-    display: block;
-    height: 0;
-    left: 50%;
-    margin-left: -9px;
-    position: absolute;
-    top: -9px;
-    transform: translateX(-50%);
-    width: 0;
+  li {
+    padding-left: var(--gap-sm);
+    padding-right: var(--gap-sm);
+
+    &:first-child {
+      padding-top: var(--gap-sm);
+    }
+
+    &:last-child {
+      padding-bottom: var(--gap-sm);
+    }
+  }
+
+  &--active {
+    margin-bottom: var(--gap);
+    opacity: 1;
   }
 }
 
 .message {
+  &.bad,
   &.error {
-    color: var(--alert-color-dark);
+    color: var(--alert-color);
     display: block;
-    font-size: calc(1.6rem + .1vw);
     font-weight: 700;
-    margin-top: 10px;
+    margin: var(--gap-xxs) 0 0;
   }
 }
 
 .success {
-  background-color: var(--success-color-dark);
-  border: 3px solid var(--success-color-meddark);
-  color: #fff;
+  @apply --alert-box-styles;
+  @apply --success-box-styles;
   display: block;
-  font-size: calc(1.8rem + .1vw);
-  font-weight: 700;
   margin: 0 0 var(--gap-sm) 0;
-  padding: var(--gap-sm);
-  text-align: center;
 }
 
 .form-text {
