Not a pixel in sight

--- a/app/client/css/layout/typography.css
+++ b/app/client/css/layout/typography.css
@@ -1,4 +1,8 @@
 
+html {
+  font-size: 62.5%;
+}
+
 body {
   color: var(--text-color);
   font-family: var(--primary-font);
@@ -11,7 +15,7 @@ body {
 p,
 pre,
 address {
-  margin: 0 0 var(--gap);
+  margin: 0 0 var(--gap) 0;
 }
 
 h1,
