--- a/app/client/css/components/buttons.css
+++ b/app/client/css/components/buttons.css
@@ -2,17 +2,17 @@
 :root {
   --btn-styles: {
     appearance: none;
-    border: .2rem solid transparent;
+    border: 2px solid transparent;
     border-radius: var(--border-radius);
     color: var(--text-color);
     cursor: pointer;
     display: inline-block;
     font-size: calc(1.3rem + .1vw);
     font-weight: 700;
-    letter-spacing: .1rem;
+    letter-spacing: 1px;
     line-height: 1;
     margin-bottom: 0;
-    padding: 1.8rem 3rem;
+    padding: 16px 30px;
     text-align: center;
     text-transform: uppercase;
     transition:
@@ -63,7 +63,7 @@
 
   &--sm {
     font-size: calc(1.1rem + .1vw);
-    padding: 1rem 1.8rem;
+    padding: 10px 18px;
   }
 
   &--full {
@@ -94,7 +94,7 @@
     &::after {
       content: '→';
       display: inline-block;
-      margin-left: .7rem;
+      margin-left: 7px;
     }
   }
 }
