--- a/app/client/css/components/forms.css
+++ b/app/client/css/components/forms.css
@@ -3,21 +3,20 @@
   --input-styles: {
     appearance: none;
     background-color: #fff;
-    border: .1rem solid var(--offset-color-medstrong);
+    border: 1px solid var(--offset-color-medstrong);
     border-radius: 0;
     box-shadow: none;
     color: var(--text-color);
-    font-family: var(--primary-font);
     font-size: 1.6rem;
     height: auto;
     line-height: 1.3;
     margin: 0;
     outline: none;
-    padding: .8rem;
+    padding: 8px;
   };
 
   --input-focus-styles {
-    border: .1rem solid var(--secondary-color);
+    border: 1px solid var(--secondary-color);
     box-shadow: none;
     outline: 0 none;
   };
@@ -44,12 +43,12 @@
 
   --success-box-styles: {
     background-color: var(--success-color-dark);
-    border: .4rem solid var(--success-color-verydark);
+    border: 4px solid var(--success-color-verydark);
   };
 
   --error-box-styles: {
     background-color: var(--alert-color-dark);
-    border: .4rem solid var(--alert-color-verydark);
+    border: 4px solid var(--alert-color-verydark);
   };
 }
 
@@ -86,7 +85,7 @@ form {
     padding: 0 0 var(--gap-sm) var(--gap);
 
     li {
-      margin-bottom: .5rem;
+      margin-bottom: 5px;
 
       &:last-child {
         margin-bottom: 0;
@@ -100,8 +99,8 @@ form {
 
   h2,
   .FormHeading {
-    border-bottom: .1rem solid var(--offset-color);
-    border-top: .1rem solid var(--offset-color);
+    border-bottom: 1px solid var(--offset-color);
+    border-top: 1px solid var(--offset-color);
     font-size: 2.2rem;
     line-height: 1.3;
     margin: var(--gap-xs) 0 var(--gap-sm);
@@ -159,11 +158,11 @@ textarea {
 
 select {
   appearance: menulist-button;
-  border: .1rem solid var(--offset-color-verystrong);
+  border: 1px solid var(--offset-color-verystrong);
   font-size: 1.4rem;
-  height: 3.4rem;
+  height: 34px;
   line-height: 1.3;
-  max-width: 54rem;
+  max-width: 540px;
   width: auto;
 
   &[multiple] {
@@ -197,7 +196,7 @@ ul {
     }
 
     input {
-      margin: 0 .8rem;
+      margin: 0 8px;
       padding: 0;
     }
   }
@@ -234,9 +233,9 @@ label {
 .error-message {
   color: var(--alert-color-dark);
   display: block;
-  font-size: 1.6rem;
+  font-size: 16px;
   font-weight: 700;
-  margin-top: 1rem;
+  margin-top: 10px;
 }
 
 .error-messages {
