--- a/app/client/css/components/pagination.css
+++ b/app/client/css/components/pagination.css
@@ -1,6 +1,6 @@
 
 :root {
-  --pagination-gap: .6rem;
+  --pagination-gap: 6px;
 }
 
 .pagination {
@@ -30,7 +30,7 @@
   border-radius: var(--border-radius);
   color: var(--text-color-subtle);
   display: block;
-  padding: .6rem 1.2rem;
+  padding: 6px 12px;
   text-decoration: none;
   transition-duration: $transition-duration;
 
