--- a/app/client/css/components/buttons.css
+++ b/app/client/css/components/buttons.css
@@ -2,22 +2,22 @@
 :root {
   --btn-styles: {
     appearance: none;
-    border: 2px solid transparent;
+    border: .2rem solid transparent;
     border-radius: var(--border-radius);
     color: var(--text-color);
     cursor: pointer;
     display: inline-block;
     font-size: calc(1.3rem + .1vw);
     font-weight: 700;
-    letter-spacing: 1px;
+    letter-spacing: .1rem;
     line-height: 1;
     margin-bottom: 0;
-    padding: 16px 30px;
+    padding: 1.8rem 3rem;
     text-align: center;
     text-transform: uppercase;
     transition:
-      background-color var(--transition-duration),
-      color var(--transition-duration);
+      background-color var(--transition-dur),
+      color var(--transition-dur);
     vertical-align: middle;
     white-space: nowrap;
   };
@@ -63,7 +63,7 @@
 
   &--sm {
     font-size: calc(1.1rem + .1vw);
-    padding: 10px 18px;
+    padding: 1rem 1.8rem;
   }
 
   &--full {
@@ -87,14 +87,6 @@
       background-color: var(--dark-color);
       border-color: transparent;
       color: #fff;
-    }
-  }
-
-  &--go {
-    &::after {
-      content: '→';
-      display: inline-block;
-      margin-left: 7px;
     }
   }
 }
