--- a/app/client/css/layout/breakpoints.css
+++ b/app/client/css/layout/breakpoints.css
@@ -1,7 +1,7 @@
 
-@custom-media --xxl (min-width: 1500px);
-@custom-media --xl (min-width: 1200px);
-@custom-media --lg (min-width: 900px);
-@custom-media --md (min-width: 768px);
-@custom-media --sm (min-width: 600px);
-@custom-media --xs (min-width: 420px);
+@custom-media --xxl (min-width: 150rem);
+@custom-media --xl (min-width: 120rem);
+@custom-media --lg (min-width: 90rem);
+@custom-media --md (min-width: 76.8rem);
+@custom-media --sm (min-width: 60rem);
+@custom-media --xs (min-width: 42rem);
