--- a/app/client/css/layout/forms.css
+++ b/app/client/css/layout/forms.css
@@ -3,20 +3,21 @@
   --input-styles: {
     appearance: none;
     background-color: #fff;
-    border: 1px solid var(--offset-color-medstrong);
+    border: .1rem solid var(--offset-color-medstrong);
     border-radius: 0;
     box-shadow: none;
     color: var(--text-color);
+    font-family: var(--primary-font);
     font-size: 1.6rem;
     height: auto;
     line-height: 1.3;
     margin: 0;
     outline: none;
-    padding: 8px;
+    padding: .8rem;
   };
 
   --input-focus-styles {
-    border: 1px solid var(--secondary-color);
+    border: .1rem solid var(--secondary-color);
     box-shadow: none;
     outline: 0 none;
   };
@@ -43,12 +44,12 @@
 
   --success-box-styles: {
     background-color: var(--success-color-dark);
-    border: 4px solid var(--success-color-verydark);
+    border: .4rem solid var(--success-color-verydark);
   };
 
   --error-box-styles: {
     background-color: var(--alert-color-dark);
-    border: 4px solid var(--alert-color-verydark);
+    border: .4rem solid var(--alert-color-verydark);
   };
 }
 
@@ -85,7 +86,7 @@ form {
     padding: 0 0 var(--gap-sm) var(--gap);
 
     li {
-      margin-bottom: 5px;
+      margin-bottom: .5rem;
 
       &:last-child {
         margin-bottom: 0;
@@ -99,8 +100,8 @@ form {
 
   h2,
   .FormHeading {
-    border-bottom: 1px solid var(--offset-color);
-    border-top: 1px solid var(--offset-color);
+    border-bottom: .1rem solid var(--offset-color);
+    border-top: .1rem solid var(--offset-color);
     font-size: 2.2rem;
     line-height: 1.3;
     margin: var(--gap-xs) 0 var(--gap-sm);
@@ -158,11 +159,11 @@ textarea {
 
 select {
   appearance: menulist-button;
-  border: 1px solid var(--offset-color-verystrong);
+  border: .1rem solid var(--offset-color-verystrong);
   font-size: 1.4rem;
-  height: 34px;
+  height: 3.4rem;
   line-height: 1.3;
-  max-width: 540px;
+  max-width: 54rem;
   width: auto;
 
   &[multiple] {
@@ -196,7 +197,7 @@ ul {
     }
 
     input {
-      margin: 0 8px;
+      margin: 0 .8rem;
       padding: 0;
     }
   }
@@ -233,9 +234,9 @@ label {
 .error-message {
   color: var(--alert-color-dark);
   display: block;
-  font-size: 16px;
+  font-size: 1.6rem;
   font-weight: 700;
-  margin-top: 10px;
+  margin-top: 1rem;
 }
 
 .error-messages {
@@ -244,7 +245,7 @@ label {
   margin: 0;
   opacity: 0;
   padding: 0;
-  transition: opacity var(--transition-duration-slow);
+  transition: opacity var(--transition-dur);
 
   li {
     padding-left: var(--gap-sm);
