--- a/app/client/css/layout/typography.css
+++ b/app/client/css/layout/typography.css
@@ -1,8 +1,7 @@
-
 body {
   color: var(--text-color);
   font-family: var(--primary-font);
-  font-size: calc(1.5rem + .1vw);
+  font-size: calc(1.5rem + 0.1vw);
   font-weight: 400;
   line-height: 1.5;
   text-rendering: optimizeLegibility;
@@ -28,27 +27,27 @@ h6 {
 }
 
 h1 {
-  font-size: calc(2.8rem + .3vw);
+  font-size: calc(2.8rem + 0.3vw);
 }
 
 h2 {
-  font-size: calc(2.4rem + .3vw);
+  font-size: calc(2.4rem + 0.3vw);
 }
 
 h3 {
-  font-size: calc(2.1rem + .3vw);
+  font-size: calc(2.1rem + 0.3vw);
 }
 
 h4 {
-  font-size: calc(1.8rem + .15vw);
+  font-size: calc(1.8rem + 0.15vw);
 }
 
 h5 {
-  font-size: calc(1.6rem + .15vw);
+  font-size: calc(1.6rem + 0.15vw);
 }
 
 h6 {
-  font-size: calc(1.4rem + .15vw);
+  font-size: calc(1.4rem + 0.15vw);
 }
 
 a {
@@ -66,11 +65,11 @@ strong {
 }
 
 small {
-  font-size: calc(1.3rem + .1vw);
+  font-size: calc(1.3rem + 0.1vw);
 }
 
 code {
   color: var(--text-color-subtle);
-  font-family: Consolas, 'Liberation Mono', Courier, monospace;
+  font-family: Consolas, "Liberation Mono", Courier, monospace;
   font-weight: 400;
 }
