--- a/app/client/css/layout/template-content.css
+++ b/app/client/css/layout/template-content.css
@@ -66,26 +66,26 @@
         color: #fff;
 
         &:hover {
-          color: var(--primary-color-verylight);
+          color: var(--primary-color-lightest);
           text-decoration: underline;
         }
       }
 
       small {
-        color: var(--primary-color-verylight);
+        color: var(--primary-color-lightest);
       }
     }
 
     tr {
       td {
-        border-bottom: 0.1rem solid var(--offset-color);
+        border-bottom: 0.1rem solid var(--neutral-color);
         color: var(--text-color);
         padding: 1rem 1.5rem;
         vertical-align: top;
       }
 
       &:nth-child(even) {
-        background-color: var(--offset-color-verysubtle);
+        background-color: var(--neutral-color-lightest);
       }
 
       &:nth-child(odd) {
@@ -151,7 +151,7 @@
 
   figcaption,
   cite {
-    color: var(--text-color-subtle);
+    color: var(--text-color-light);
     display: block;
     font-size: calc(1.3rem + 0.1vw);
     font-style: normal;
