--- a/app/client/css/layout/typography.css
+++ b/app/client/css/layout/typography.css
@@ -69,7 +69,7 @@ small {
 }
 
 code {
-  color: var(--text-color-subtle);
+  color: var(--text-color-light);
   font-family: Consolas, "Liberation Mono", Courier, monospace;
   font-weight: 400;
 }
