--- a/app/client/css/settings/colors.css
+++ b/app/client/css/settings/colors.css
@@ -1,45 +1,45 @@
 :root {
   --text-color: #555;
-  --text-color-subtle: color(var(--text-color) tint(30%));
-  --text-color-medsubtle: color(var(--text-color) tint(60%));
-  --text-color-verysubtle: color(var(--text-color) tint(90%));
+  --text-color-light: color(var(--text-color) tint(30%));
+  --text-color-lighter: color(var(--text-color) tint(60%));
+  --text-color-lightest: color(var(--text-color) tint(90%));
   --text-color-strong: color(var(--text-color) shade(30%));
   --text-color-medstrong: color(var(--text-color) shade(60%));
   --text-color-verystrong: color(var(--text-color) shade(90%));
   --primary-color: #00afd6;
   --primary-color-dark: color(var(--primary-color) shade(30%));
-  --primary-color-meddark: color(var(--primary-color) shade(60%));
-  --primary-color-verydark: color(var(--primary-color) shade(90%));
+  --primary-color-darker: color(var(--primary-color) shade(60%));
+  --primary-color-darkest: color(var(--primary-color) shade(90%));
   --primary-color-light: color(var(--primary-color) tint(10%));
-  --primary-color-medlight: color(var(--primary-color) tint(35%));
-  --primary-color-verylight: color(var(--primary-color) tint(60%));
+  --primary-color-lighter: color(var(--primary-color) tint(35%));
+  --primary-color-lightest: color(var(--primary-color) tint(60%));
   --secondary-color: #ef3304;
   --secondary-color-dark: color(var(--secondary-color) shade(30%));
-  --secondary-color-meddark: color(var(--secondary-color) shade(60%));
-  --secondary-color-verydark: color(var(--secondary-color) shade(90%));
+  --secondary-color-darker: color(var(--secondary-color) shade(60%));
+  --secondary-color-darkest: color(var(--secondary-color) shade(90%));
   --secondary-color-light: color(var(--secondary-color) tint(30%));
-  --secondary-color-medlight: color(var(--secondary-color) tint(60%));
-  --secondary-color-verylight: color(var(--secondary-color) tint(90%));
-  --offset-color: #ddd;
-  --offset-color-subtle: color(var(--offset-color) tint(30%));
-  --offset-color-medsubtle: color(var(--offset-color) tint(60%));
-  --offset-color-verysubtle: color(var(--offset-color) tint(90%));
-  --offset-color-strong: color(var(--offset-color) shade(20%));
-  --offset-color-medstrong: color(var(--offset-color) shade(40%));
-  --offset-color-verystrong: color(var(--offset-color) shade(60%));
+  --secondary-color-lighter: color(var(--secondary-color) tint(60%));
+  --secondary-color-lightest: color(var(--secondary-color) tint(90%));
+  --neutral-color: #ddd;
+  --neutral-color-light: color(var(--neutral-color) tint(30%));
+  --neutral-color-lighter: color(var(--neutral-color) tint(60%));
+  --neutral-color-lightest: color(var(--neutral-color) tint(90%));
+  --neutral-color-strong: color(var(--neutral-color) shade(20%));
+  --neutral-color-medstrong: color(var(--neutral-color) shade(40%));
+  --neutral-color-verystrong: color(var(--neutral-color) shade(60%));
   --dark-color: #222;
   --dark-color-light: color(var(--dark-color) tint(20%));
-  --dark-color-medlight: color(var(--dark-color) tint(40%));
-  --dark-color-verylight: color(var(--dark-color) tint(60%));
+  --dark-color-lighter: color(var(--dark-color) tint(40%));
+  --dark-color-lightest: color(var(--dark-color) tint(60%));
   --dark-color-dark: color(var(--dark-color) shade(20%));
-  --dark-color-meddark: color(var(--dark-color) shade(40%));
-  --dark-color-verydark: color(var(--dark-color) shade(60%));
+  --dark-color-darker: color(var(--dark-color) shade(40%));
+  --dark-color-darkest: color(var(--dark-color) shade(60%));
   --alert-color: #c40000;
   --alert-color-dark: #b00000;
-  --alert-color-meddark: color(var(--alert-color) shade(40%));
-  --alert-color-verydark: color(var(--alert-color) shade(60%));
+  --alert-color-darker: color(var(--alert-color) shade(40%));
+  --alert-color-darkest: color(var(--alert-color) shade(60%));
   --success-color: #00b548;
   --success-color-dark: color(var(--success-color) shade(30%));
-  --success-color-meddark: color(var(--success-color) shade(60%));
-  --success-color-verydark: color(var(--success-color) shade(60%));
+  --success-color-darker: color(var(--success-color) shade(60%));
+  --success-color-darkest: color(var(--success-color) shade(60%));
 }
