--- a/app/client/css/layout/typography.css
+++ b/app/client/css/layout/typography.css
@@ -19,7 +19,7 @@ h3,
 h4,
 h5,
 h6 {
-  color: var(--text-color-medstrong);
+  color: var(--text-color-darker);
   font-family: var(--secondary-font);
   font-weight: 700;
   line-height: 1.4;
