--- a/app/client/css/layout/forms.css
+++ b/app/client/css/layout/forms.css
@@ -2,7 +2,7 @@
   --input-styles: {
     appearance: none;
     background-color: #fff;
-    border: 0.1rem solid var(--neutral-color-medstrong);
+    border: 0.1rem solid var(--neutral-color-darker);
     border-radius: 0;
     box-shadow: none;
     color: var(--text-color);
@@ -22,7 +22,7 @@
   }
 
   --label-styles {
-    color: var(--text-color-strong);
+    color: var(--text-color-dark);
     font-size: 1.8rem;
     font-weight: 700;
     line-height: 1.3;
@@ -158,7 +158,7 @@ textarea {
 
 select {
   appearance: menulist-button;
-  border: 0.1rem solid var(--neutral-color-verystrong);
+  border: 0.1rem solid var(--neutral-color-darkest);
   font-size: 1.4rem;
   height: 3.4rem;
   line-height: 1.3;
