--- a/app/client/css/settings/colors.css
+++ b/app/client/css/settings/colors.css
@@ -44,6 +44,6 @@
   --success-color-darkest: color(var(--success-color) shade(60%));
   --warning-color: #ffc107;
   --warning-color-dark: color(var(--warning-color) shade(30%));
-  --warning-color-meddark: color(var(--warning-color) shade(40%));
-  --warning-color-verydark: color(var(--warning-color) shade(60%));
+  --warning-color-darker: color(var(--warning-color) shade(40%));
+  --warning-color-darkest: color(var(--warning-color) shade(60%));
 }
