--- a/app/client/css/components/buttons.css
+++ b/app/client/css/components/buttons.css
@@ -6,6 +6,7 @@
     color: var(--text-color);
     cursor: pointer;
     display: inline-block;
+    font-family: var(--primary-font);
     font-size: calc(1.3rem + 0.1vw);
     font-weight: 700;
     letter-spacing: 0.1rem;
