--- a/app/client/css/settings/vars.css
+++ b/app/client/css/settings/vars.css
@@ -1,13 +1,16 @@
 :root {
   --border-radius: 0.4rem;
-  --gap: 3.5rem;
-  --gap-sm: calc(var(--gap) * 0.8);
-  --gap-xs: calc(var(--gap) * 0.6);
-  --gap-xxs: calc(var(--gap) * 0.4);
-  --gap-lg: calc(var(--gap) * 1.5);
-  --gap-xl: calc(var(--gap) * 2);
-  --gap-xxl: calc(var(--gap) * 2.5);
-  --max-width: 120rem;
+  --gap-xxxs: 0.8rem;
+  --gap-xxs: 1.6rem;
+  --gap-unit: 3.2rem;
+  --gap-xxs: calc(0.25 * var(--gap-unit)); /* 8px */
+  --gap-xs: calc(0.5 * var(--gap-unit)); /* 16px */
+  --gap-sm: calc(0.75 * var(--gap-unit)); /* 24px */
+  --gap: calc(1.25 * var(--gap-unit)); /* 40px */
+  --gap-lg: calc(2 * var(--gap-unit)); /* 64px */
+  --gap-xl: calc(3.25 * var(--gap-unit)); /* 104px */
+  --gap-xxl: calc(5.25 * var(--gap-unit)); /* 168px */
+  --max-width: 150rem;
   --max-width-sm: calc(var(--max-width) * 0.8);
   --max-width-xs: calc(var(--max-width) * 0.6);
   --max-width-lg: calc(var(--max-width) * 1.2);
