--- a/app/client/css/app.css
+++ b/app/client/css/app.css
@@ -7,7 +7,6 @@
 
 @import "layout/base";
 @import "layout/breakpoints";
-@import "layout/forms";
 @import "layout/helpers";
 @import "layout/structure";
 @import "layout/template-content";
@@ -17,5 +16,6 @@
 
 @import "components/buttons";
 @import "components/embeds";
+@import "components/forms";
 @import "components/pagination";
 @import "components/ss-images";
