--- a/app/client/css/components/buttons.css
+++ b/app/client/css/components/buttons.css
@@ -7,7 +7,7 @@
     cursor: pointer;
     display: inline-block;
     font-family: var(--primary-font);
-    font-size: calc(1.3rem + 0.1vw);
+    font-size: 1.5rem;
     font-weight: 700;
     letter-spacing: 0.1rem;
     line-height: 1;
