--- a/app/client/css/layout/typography.css
+++ b/app/client/css/layout/typography.css
@@ -1,7 +1,7 @@
 body {
   color: var(--text-color);
   font-family: var(--primary-font);
-  font-size: calc(1.5rem + 0.1vw);
+  font-size: 1.6rem;
   font-weight: 400;
   line-height: 1.5;
   text-rendering: optimizeLegibility;
@@ -27,27 +27,51 @@ h6 {
 }
 
 h1 {
-  font-size: calc(2.8rem + 0.3vw);
+  font-size: 2.8rem;
+
+  @media (--md) {
+    font-size: 3.2rem;
+  }
 }
 
 h2 {
-  font-size: calc(2.4rem + 0.3vw);
+  font-size: 2.4rem;
+
+  @media (--md) {
+    font-size: 2.8rem;
+  }
 }
 
 h3 {
-  font-size: calc(2.1rem + 0.3vw);
+  font-size: 2.1rem;
+
+  @media (--md) {
+    font-size: 2.8rem;
+  }
 }
 
 h4 {
-  font-size: calc(1.8rem + 0.15vw);
+  font-size: 1.8rem;
+
+  @media (--md) {
+    font-size: 2.1rem;
+  }
 }
 
 h5 {
-  font-size: calc(1.6rem + 0.15vw);
+  font-size: 1.6rem;
+
+  @media (--md) {
+    font-size: 1.8rem;
+  }
 }
 
 h6 {
-  font-size: calc(1.4rem + 0.15vw);
+  font-size: 1.5rem;
+
+  @media (--md) {
+    font-size: 1.6rem;
+  }
 }
 
 a {
